--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,6 @@
   <body>
     <h1><%= title %></h1>
     <p>EJS Welcome to <%= title %></p>
+    <script type="text/javascript" src="/entries/pageOne.js"></script>
   </body>
 </html>
