--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,104 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <title>去中心化的职业信用联盟</title>
+    <link rel='stylesheet' href='/css/bootstrap.min.css' />
+    <% if (env == 'dev') { %>
+    <link rel="stylesheet/less" type="text/css" charset="utf-8" href="/less/index.less">
+    <script type="text/javascript" src="/js/vendor/less.min.js"></script>
+    <% } else { %>
+    <link rel="stylesheet" type="text/css" charset="utf-8" href="/css/index.css">
+    <% } %>
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>EJS Welcome to <%= title %></p>
+    <header class="container-fluid clearfix">
+      <div class="row">
+        <div class="col-md-12">
+          <a href="/" class="logo" title="去中心化的职业信用联盟"></a>
+          <ul class="nav-links">
+            <li><a href="#">首页</a></li>
+            <li><a href="#">我们的产品</a></li>
+            <li><a href="#">区块链背调</a></li>
+            <li><a href="#">关于我们</a></li>
+            <li><a href="#">线路图</a></li>
+            <li><a href="#">合作伙伴</a></li>
+            <li><a href="#" class="btn-rl btn-gray btn-register">注册</a></li>
+            <li><a href="#" class="btn-rl btn-main btn-login">登录</a></li>
+          </ul>
+        </div>
+      </div>
+    </header>
+    <div class="chainio clearfix">
+      <div class="l-p">
+        <h2>去中心化的职业信用联盟</h2>
+        <h3>基于区块链技术，构建职业信用联盟链，提升雇员<br />背景调查效率，让中国职业信用环境更美好</h3>
+        <a href="javascript:;" class="btn-main join-union">加入职业信用联盟</a>
+      </div>
+      <div class="r-p">
+        <p></p>
+      </div>
+    </div>
+    <div class="out-product clearfix">
+      <h2>我们的产品</h2>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 words">
+            zxchain.io是基于区块链背调产品
+            <p>职业信用联盟链中的企业记录着离职员工在本企业就职的入离职时间、职位、离职原因、是否有劳动争议、是否竞业禁止等工作履历信息，离职员工的工作履历信息可提供给联盟链中其他企业（获得员工本人授权是前提）。通过这些不可篡改的职业信息，企业可以更加全面、真实的了解应聘候选人的过往履历，从而招到更放心的人。同时，对于求职者来说，可以获得更为公平的竞争机会</p>
+          </div>
+          <div class="col-md-6 advantage">
+            <div class="adv-item pic-right clearfix">
+              <div>
+                真实可靠
+                <p>区块链底层技术带来的信息不可篡改性</p>
+              </div>
+              <span class="veracity"></span>
+            </div>
+            <div class="adv-item clearfix" style="margin: 40px 0;">
+              <div>
+                提升效率
+                <p>通过区块链技术的去中心化特性提升效率</p>
+              </div>
+              <span class="efficiency"></span>
+            </div>
+            <div class="adv-item pic-right clearfix">
+              <div>
+                降低成本
+                <p>联盟链中进行互助调查极大降低成本</p>
+              </div>
+              <span class="cost"></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="tec-process clearfix">
+      <h2>技术及流程</h2>
+      <div class="steps">
+        <span>1.委托方发起背调</span>
+        <span>2.获得候选人授权</span>
+        <span>3.通过区块链的技术传播至委托方</span>
+        <span>4.委托方接受信息，完成履历验证</span>
+        <div class="clearfix"></div>
+        <span>5.返回结果至委托方</span>
+      </div>
+      <p class="process-pic"></p>
+    </div>
+    <div class="about-us clearfix">
+      <h2>关于我们</h2>
+      <div class="content">我们有一支区块链方面的技术专家及顾问团队<br />核心团队来自阿里巴巴、华为、恒生电子、浙大网新等知名公司<br />我们有职业信用领域方面的丰富经验<br />运营有已服务于数千家企业的互联网背景调查公司（i背调）<br />我们是区块链技术应用于职业信用场景的先行者和最佳实践者</div>
+    </div>
+    <div class="roadmap clearfix">
+      <div class="clearfix"></div>
+      <div class="line">
+        <div class="map">
+          <div class="m1 up"><p>Q4 2017 - Q1 2018<br />完成职业信用联盟极其交易模型<br />实现职业信用联盟链V1.0上链</p></div>
+          <div class="m2 down"><p>Q2 - Q4, 2018<br />推出基于智能合约的应用<br />5000家企业加入联盟链</p></div>
+          <div class="m3 up"><p>2019<br />100000家企业上链<br />持续完善联盟链功能</p></div>
+          <div class="m4 down"><p>2020<br />100万家企业上链<br />拓展基于职业信用的其他关联服务</p></div>
+        </div>
+      </div>
+    </div>
     <script type="text/javascript" src="/entries/pageOne.js"></script>
   </body>
 </html>
