--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,8 +22,8 @@
             <li><a href="#">关于我们</a></li>
             <li><a href="#">线路图</a></li>
             <li><a href="#">合作伙伴</a></li>
-            <li><a href="#" class="btn-rl btn-gray btn-register">注册</a></li>
-            <li><a href="#" class="btn-rl btn-main btn-login">登录</a></li>
+            <!-- <li><a href="#" class="btn-rl btn-gray btn-register">注册</a></li>
+            <li><a href="#" class="btn-rl btn-main btn-login">登录</a></li> -->
           </ul>
         </div>
       </div>
@@ -86,10 +86,10 @@
     </div>
     <div class="about-us clearfix">
       <h2>关于我们</h2>
-      <div class="content">我们有一支区块链方面的技术专家及顾问团队<br />核心团队来自阿里巴巴、华为、恒生电子、浙大网新等知名公司<br />我们有职业信用领域方面的丰富经验<br />运营有已服务于数千家企业的互联网背景调查公司（i背调）<br />我们是区块链技术应用于职业信用场景的先行者和最佳实践者</div>
+      <div class="content">我们有一支区块链方面的技术专家及顾问团队<br />核心团队来自阿里巴巴、华为、恒生电子、浙大网新等知名公司<br />我们有职业信用领域方面的丰富经验<br />运作有近十万人的企业HR互助联盟<br />运营有已服务于数千家企业的互联网背景调查公司（i背调）<br />我们是区块链技术应用于职业信用场景的先行者和最佳实践者</div>
     </div>
     <div class="roadmap clearfix">
-      <div class="clearfix"></div>
+      <h2>路线图</h2>
       <div class="line">
         <div class="map">
           <div class="m1 up"><p>Q4 2017 - Q1 2018<br />完成职业信用联盟极其交易模型<br />实现职业信用联盟链V1.0上链</p></div>
@@ -99,6 +99,51 @@
         </div>
       </div>
     </div>
+    <div class="co clearfix">
+      <h2>投资机构与合作伙伴</h2>
+      <div class="logos">
+        <div class="logo-item"><p class="frees"></p></div>
+        <div class="logo-item"><p class="xinghe"></p></div>
+        <div class="logo-item"><p class="lvchengzhongguo"></p></div>
+        <div class="logo-item"><p class="hailiang"></p></div>
+        <div class="logo-item"><p class="okcoin"></p></div>
+        <div class="logo-item"><p class="jinzhouyinhang"></p></div>
+        <div class="logo-item"><p class="yangguangbaoxian"></p></div>
+        <div class="logo-item"><p class="kuaishou"></p></div>
+        <div class="logo-item"><p class="paipaidai"></p></div>
+        <div class="logo-item"><p class="liepin"></p></div>
+      </div>
+      </div>
+    </div>
+    <footer>
+      <div class="logo-row">
+        <div class="container clearfix">
+          <div class="row">
+            <div class="col-md-2">
+              <a href="/" class="logo" title="去中心化的职业信用联盟"></a>
+            </div>
+            <div class="col-md-10">
+              <ul class="nav-links">
+                <li><a href="#">我们的产品</a></li>
+                <li><a href="#">区块链背调</a></li>
+                <li><a href="#">关于我们</a></li>
+                <li><a href="#">线路图</a></li>
+                <li><a href="#">合作伙伴</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="copyright-row">
+        <div class="container clearfix">
+          <div class="row">
+            <div class="col-md-12">
+              <p class="text">Copyright © 2018 杭州有才信息技术有限公司. All Rights Reserved.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="/entries/pageOne.js"></script>
   </body>
 </html>
