--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <title>去中心化的职业信用联盟</title>
     <link rel='stylesheet' href='/asset/css/bootstrap.min.css' />
     <% if (env !== 'dev') { %>
-      <link rel="stylesheet" type="text/css" charset="utf-8" href="/dist/pageOne.css">
+      <link rel="stylesheet" type="text/css" charset="utf-8" href="/dist/css/pageOne.css">
     <% } %>
   </head>
   <body>
