--- a/public/src/less/index.less
+++ b/public/src/less/index.less
@@ -1,53 +1,20 @@
-body {
-	font-family: "Microsoft YaHei","微软雅黑","Open Sans",PingFangSC-Light,Arial,"Hiragino Sans GB",STHeiti,"WenQuanYi Micro Hei",SimSun,sans-serif;
-}
+@import './common/base.less';
+@import './lib/bootstrap-responsive.less';
 
-header {
-	.logo {
-		float: left;
-		display: inline;
-		width: 174px;
-		height: 42px;
-		background: url(../images/logo.png) no-repeat;
-		margin: 25px 0 0 30px;
-	}
-	.nav-links {
-		float: right;
-		display: inline;
-		margin: 25px 30px 0 0;
-		list-style: none;
-		li {
-			display: inline-block;
-			line-height: 42px;
-			margin-left: 25px;
-			a {
-				color: #34495C;
-				font-size: 16px;
-				&:hover {
-					text-decoration: none;
-				}
-				&.btn-rl {
-					display: block;
-					width: 66px;
-					height: 32px;
-					margin-top: 5px;
-					line-height: 32px;
-					color: #fff;
-				}
-				&.btn-register {
-					margin-left: 45px;
-				}
-			}
-		}
-	}
+body {
+  font-family: "Microsoft YaHei","微软雅黑","Open Sans",PingFangSC-Light,Arial,"Hiragino Sans GB",STHeiti,"WenQuanYi Micro Hei",SimSun,sans-serif;
+  width: 100%;
+  height: 100%;
+  // overflow-x: hidden;
+  margin: 0;
 }
 
 .chainio {
-	width: 1335px;
-	margin: 180px auto 96px;
+  max-width: 1270px;
+  padding: 203px 0 96px;
 	.l-p {
-		float: left;
-		width: 580px;
+		// float: left;
+		// width: 580px;
 		h2 {
 			color: #34495C;
 			font-size: 48px;
@@ -61,7 +28,7 @@ header {
 			margin-bottom: 40px;
 		}
 		.join-union {
-			display: block;
+			display: inline-block;
 			width: 190px;
 			height: 50px;
 			line-height: 50px;
@@ -81,18 +48,28 @@ header {
 	}
 }
 
-.out-product {
+.our-product {
 	background-color: #F5F8F9;
 	padding: 82px 0 120px;
 	h2 {
 		padding-bottom: 60px;
 		text-align: center;
-		text-align: center;
 		color: #34495C;
 		font-size: 40px;
 		overflow: hidden;
-	}
+  }
+  .content-wrap {
+    display: -webkit-box;
+    display: flex;
+    display: -ms-flexbox;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  }
 	.words {
+    display: block;
+    -webkit-box-flex: 0;
+    flex: 0 0 50%;
+    max-width: 50%;
 		padding: 84px 65px 0;
 		color: #fff;
 		background-color: #40B8B4;
@@ -104,6 +81,10 @@ header {
 		}
 	}
 	.advantage {
+    display: block;
+    -webkit-box-flex: 0;
+    flex: 0 0 50%;
+    max-width: 50%;
 		background-color: #fff;
 		padding: 85px 65px;
 		.adv-item {
@@ -122,15 +103,16 @@ header {
 			span {
 				float: left;
 				width: 76px;
-				height: 76px;
+        height: 76px;
+        background-size: contain!important;
 				&.efficiency {
-					background: url(../images/efficiency.png) no-repeat;
+					background: url(../images/efficiency.png) no-repeat center;
 				}
 				&.cost {
-					background: url(../images/cost.png) no-repeat;
+					background: url(../images/cost.png) no-repeat center;
 				}
 				&.veracity {
-					background: url(../images/veracity.png) no-repeat;
+					background: url(../images/veracity.png) no-repeat center;
 				}
 			}
 			&.pic-right {
@@ -151,7 +133,6 @@ header {
 	h2 {
 		padding-bottom: 60px;
 		text-align: center;
-		text-align: center;
 		color: #fff;
 		font-size: 40px;
 		overflow: hidden;
@@ -161,9 +142,10 @@ header {
 		margin: 0 auto;
 		line-height: 30px;
 		color: #fff;
-		font-size: 16px;
-		span {
-			margin-right: 30px;
+		p {
+      display: inline-block;
+      font-size: 16px;
+      margin: auto 30px auto auto;
 		}
 	}
 	.process-pic {
@@ -179,7 +161,6 @@ header {
 	padding: 82px 0 120px;
 	h2 {
 		padding-bottom: 60px;
-		text-align: center;
 		text-align: center;
 		color: #34495C;
 		font-size: 40px;
@@ -200,7 +181,6 @@ header {
 	padding-top: 82px;
 	h2 {
 		text-align: center;
-		text-align: center;
 		color: #34495C;
 		font-size: 40px;
 		overflow: hidden;
@@ -214,7 +194,7 @@ header {
 		width: 100%;
 		.map {
 			position: absolute;
-			width: 1200px;
+			max-width: 1200px;
 			left: 0;
 			right: 0;
 			margin: 0 auto;
@@ -270,25 +250,24 @@ header {
 	background-color: #fff;
 	padding: 82px 0 82px;
 	h2 {
-		padding-bottom: 82px;
-		text-align: center;
+		margin-bottom: 82px;
 		text-align: center;
 		color: #34495C;
 		font-size: 40px;
 		overflow: hidden;
 	}
 	.logos {
-		width: 1270px;
+		max-width: 1270px;
 		margin: 0 auto;
 		.logo-item {
 			float: left;
-			display: inline;
-			width: 20%;
+      width: 20%;
 			p {
 				width: 134px;
 				height: 62px;
 				background-repeat: no-repeat;
-				background-position: center;
+        background-position: center;
+        background-size: contain!important;
 				margin: 10px auto;
 				&.frees {
 					background-image: url(../images/logos/fengrui.png);
@@ -328,47 +307,6 @@ header {
 	}
 }
 
-footer {
-	background-color: #273237;
-	.logo-row {
-		padding: 59px 0 64px;
-		border-bottom: 1px solid #666;
-		.logo {
-			float: left;
-			display: inline;
-			width: 174px;
-			height: 42px;
-			background: url(../images/logo.png) no-repeat;
-		}
-		.nav-links {
-			float: right;
-			display: inline;
-			list-style: none;
-			li {
-				display: inline-block;
-				line-height: 42px;
-				margin-left: 45px;
-				a {
-					color: #fff;
-					font-size: 16px;
-					&:hover {
-						text-decoration: none;
-					}
-				}
-			}
-		}
-	}
-	.copyright-row {
-		.text {
-			padding: 38px 0;
-			color: #fff;
-			font-size: 14px;
-			margin-bottom: 0;
-		}
-	}
-}
-
-
 .btn-hover (@bg, @c: #fff, @offset: 5%) {
     &:hover {
     	color: #fff;
@@ -396,3 +334,9 @@ footer {
 	background-color: #E5EBEB;
 	.btn-hover(#E5EBEB);
 }
+
+
+@media only screen and (max-device-width: 768px) {
+  @import "./index/index-phone.less";
+}
+
