--- a/public/src/less/common/header-front.less
+++ b/public/src/less/common/header-front.less
@@ -64,7 +64,7 @@ header.front-header {
 					line-height: 32px;
 					color: #fff;
 				}
-				&.btn-register {
+				&.btn-login {
 					margin-left: 45px;
 				}
 			}
