--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
                   <li><a href="#">关于我们</a></li>
                   <li><a href="#">线路图</a></li>
                   <li><a href="#">合作伙伴</a></li>
-                  <li><a href="#" class="btn-rl btn-gray btn-register">注册</a></li>
+                  <!-- <li><a href="#" class="btn-rl btn-gray btn-register">注册</a></li> -->
                   <li><a href="#" class="btn-rl btn-main btn-login">登录</a></li>
                 </ul>
               </div>
@@ -138,7 +138,7 @@
               <div class="container clearfix">
                 <div class="row">
                   <div class="col-md-12">
-                    <p class="text">Copyright © 2018 杭州有才信息技术有限公司. All Rights Reserved.<br/><br/>浙ICP备1    浙公网安备     号</p>
+                    <p class="text">Copyright © 2018 杭州有才信息技术有限公司. All Rights Reserved.</p>
                   </div>
                 </div>
               </div>
