--- a/public/src/less/index.less
+++ b/public/src/less/index.less
@@ -41,8 +41,9 @@ body {
 	.r-p {
 		float: right;
 		p {
-			background: url(../images/lian.png) no-repeat;
-			width: 618px;
+      background: url(../images/lian.png) no-repeat center;
+      background-size: contain!important;
+			width: 100%;
 			height: 454px;
 		}
 	}
@@ -88,9 +89,9 @@ body {
 		background-color: #fff;
 		padding: 85px 65px;
 		.adv-item {
-			div {
+			.text-wrap {
 				float: right;
-				width: 295px;
+				// width: 295px;
 				border-bottom: solid 1px #DFDFDF;
 				padding-bottom: 20px;
 				color: #34495C;
@@ -99,9 +100,13 @@ body {
 					margin-top: 10px;
 					font-size: 16px;
 				}
-			}
+      }
+      .icon-wrap {
+        float: left;
+      }
 			span {
-				float: left;
+        float: left;        
+        display: block;
 				width: 76px;
         height: 76px;
         background-size: contain!important;
@@ -116,11 +121,14 @@ body {
 				}
 			}
 			&.pic-right {
-				div {
+				.text-wrap {
 					float: left;
 				}
-				span {
-					float: right;
+				.icon-wrap {
+          float: right;
+          span {
+            float: right;
+          }
 				}
 			}
 		}
@@ -200,46 +208,46 @@ body {
 			margin: 0 auto;
 			.up {
 				&.m1, &.m3 {
-					left: 10px;
+					left: 0;
 					position: absolute;
 					top: -109px;
 					background: url(../images/up.png) no-repeat;
-					width: 26px;
-					height: 120px;
+          height: 120px;
+          padding-left: 26px;
 					p {
 						position: absolute;
 				    left: 34px;
 						top: -28px;
-						width: 240px;
+						width: 100%;
 						color: #34495C;
 						font-size: 16px;
 						line-height: 20px;
 					}
 				}
 				&.m3 {
-					left: 610px;
+					left: 50%;
 				}
 			}
 			.down {
 				&.m2, &.m4 {
-					left: 310px;
+					left: 25%;
 					position: absolute;
 					top: -10px;
 					background: url(../images/down.png) no-repeat;
-					width: 26px;
-					height: 120px;
+          height: 120px;
+          padding-left: 26px;
 					p {
 						position: absolute;
 				    left: 34px;
 						top: 89px;
-						width: 240px;
+						width: 100%;
 						color: #34495C;
 						font-size: 16px;
 						line-height: 20px;
 					}
 				}
 				&.m4 {
-					left: 910px;
+					left: 75%;
 				}
 			}
 		}
