--- a/public/src/less/index/index-880.less
+++ b/public/src/less/index/index-880.less
@@ -78,7 +78,7 @@ body {
 		background-color: inherit;
 		padding: 0;
 		.adv-item {
-			div {
+			.text-wrap {
 				width: 456 * @s;
 				padding-bottom: 32 * @s;
 				font-size: 30 * @s;
@@ -87,7 +87,7 @@ body {
 					font-size: 24 * @s;
 				}
 			}
-			span {
+			.icon-wrap,span {
 				width: 96 * @s;
 				height: 96 * @s;
 			}
