--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
                   <li><a href="#">线路图</a></li>
                   <li><a href="#">合作伙伴</a></li>
                   <!-- <li><a href="#" class="btn-rl btn-gray btn-register">注册</a></li> -->
-                  <li><a href="#" class="btn-rl btn-main btn-login">登录</a></li>
+                  <!-- <li><a href="#" class="btn-rl btn-main btn-login">登录</a></li> -->
                 </ul>
               </div>
             </div>
@@ -48,26 +48,32 @@
                   <p>职业信用联盟链中的企业记录着离职员工在本企业就职的入离职时间、职位、离职原因、是否有劳动争议、是否竞业禁止等工作履历信息，离职员工的工作履历信息可提供给联盟链中其他企业（获得员工本人授权是前提）。通过这些不可篡改的职业信息，企业可以更加全面、真实的了解应聘候选人的过往履历，从而招到更放心的人。同时，对于求职者来说，可以获得更为公平的竞争机会</p>
                 </div>
                 <div class="advantage">
-                  <div class="adv-item pic-right clearfix">
-                    <div>
+                  <div class="adv-item pic-right clearfix row">
+                    <div class="text-wrap col-8">
                       真实可靠
                       <p>区块链底层技术带来的信息不可篡改性</p>
                     </div>
-                    <span class="veracity"></span>
+                    <div class="icon-wrap col-3">
+                        <span class="veracity"></span>
+                    </div>
                   </div>
-                  <div class="adv-item clearfix" style="margin: 40px 0;">
-                    <div>
+                  <div class="adv-item clearfix row" style="margin: 40px 0;">
+                    <div  class="text-wrap col-8">
                       提升效率
                       <p>通过区块链技术的去中心化特性提升效率</p>
                     </div>
-                    <span class="efficiency"></span>
+                    <div class="icon-wrap col-3">
+                        <span class="efficiency"></span>                    
+                    </div>
                   </div>
-                  <div class="adv-item pic-right clearfix">
-                    <div>
+                  <div class="adv-item pic-right clearfix row">
+                    <div  class="text-wrap col-8">
                       降低成本
                       <p>联盟链中进行互助调查极大降低成本</p>
                     </div>
-                    <span class="cost"></span>
+                    <div class="icon-wrap col-3">
+                      <span class="cost"></span>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -91,11 +97,11 @@
           <div class="roadmap clearfix">
             <h2>路线图</h2>
             <div class="line">
-              <div class="map container">
-                <div class="map-item m1 up"><p>Q4 2017 - Q1 2018<br />完成职业信用联盟极其交易模型<br />实现职业信用联盟链V1.0上链</p></div>
-                <div class="map-item m2 down"><p>Q2 - Q4, 2018<br />推出基于智能合约的应用<br />5000家企业加入联盟链</p></div>
-                <div class="map-item m3 up"><p>2019<br />100000家企业上链<br />持续完善联盟链功能</p></div>
-                <div class="map-item m4 down"><p>2020<br />100万家企业上链<br />拓展基于职业信用的其他关联服务</p></div>
+              <div class="map container row">
+                <div class="map-item m1 up col-3 col-xs-12"><p>Q4 2017 - Q1 2018<br />完成职业信用联盟极其交易模型<br />实现职业信用联盟链V1.0上链</p></div>
+                <div class="map-item m2 down col-3 col-xs-12"><p>Q2 - Q4, 2018<br />推出基于智能合约的应用<br />5000家企业加入联盟链</p></div>
+                <div class="map-item m3 up col-3 col-xs-12"><p>2019<br />100000家企业上链<br />持续完善联盟链功能</p></div>
+                <div class="map-item m4 down col-3 col-xs-12"><p>2020<br />100万家企业上链<br />拓展基于职业信用的其他关联服务</p></div>
               </div>
             </div>
           </div>
