--- a/public/src/less/index.less
+++ b/public/src/less/index.less
@@ -215,8 +215,8 @@ body {
           height: 120px;
           padding-left: 26px;
 					p {
-						position: absolute;
-				    left: 34px;
+						position: relative;
+				    left: 0;
 						top: -28px;
 						width: 100%;
 						color: #34495C;
@@ -237,8 +237,8 @@ body {
           height: 120px;
           padding-left: 26px;
 					p {
-						position: absolute;
-				    left: 34px;
+						position: relative;
+				    left: 0;
 						top: 89px;
 						width: 100%;
 						color: #34495C;
