--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,19 +10,19 @@
     <% } %>
   </head>
   <body>
-    <div class="main-wrap">
+    <div class="main-wrap" id="top">
         <header class="container-fluid clearfix front-header">
             <div class="row">
               <div class="col-12">
                 <a href="/" class="logo" title="去中心化的职业信用联盟"></a>
                 <a href="javascript:;" class="icon-nav-btn"></a>
                 <ul class="nav-links">
-                  <li><a href="#">首页</a></li>
-                  <li><a href="#">我们的产品</a></li>
-                  <li><a href="#">区块链背调</a></li>
-                  <li><a href="#">关于我们</a></li>
-                  <li><a href="#">线路图</a></li>
-                  <li><a href="#">合作伙伴</a></li>
+                  <li><a href="#top">首页</a></li>
+                  <li><a href="#ourProduct">我们的产品</a></li>
+                  <li><a href="#tecProcess">区块链背调</a></li>
+                  <li><a href="#aboutUs">关于我们</a></li>
+                  <li><a href="#roadmap">线路图</a></li>
+                  <li><a href="#co">合作伙伴</a></li>
                   <!-- <li><a href="#" class="btn-rl btn-gray btn-register">注册</a></li> -->
                   <!-- <li><a href="#" class="btn-rl btn-main btn-login">登录</a></li> -->
                 </ul>
@@ -39,7 +39,7 @@
               <p></p>
             </div>
           </div>
-          <div class="our-product clearfix">
+          <div class="our-product clearfix" id="ourProduct">
             <h2>我们的产品</h2>
             <div class="container">
               <div class="content-wrap row">
@@ -79,7 +79,7 @@
               </div>
             </div>
           </div>
-          <div class="tec-process clearfix">
+          <div class="tec-process clearfix" id="tecProcess">
             <h2>技术及流程</h2>
             <div class="steps row">
               <p>1.委托方发起背调</p>
@@ -90,11 +90,11 @@
             </div>
             <p class="process-pic"></p>
           </div>
-          <div class="about-us clearfix">
+          <div class="about-us clearfix" id="aboutUs">
             <h2>关于我们</h2>
             <div class="content">我们有一支区块链方面的技术专家及顾问团队<br />核心团队来自阿里巴巴、华为、恒生电子、浙大网新等知名公司<br />我们有职业信用领域方面的丰富经验<br />运作有近十万人的企业HR互助联盟<br />运营有已服务于数千家企业的互联网背景调查公司（i背调）<br />我们是区块链技术应用于职业信用场景的先行者和最佳实践者</div>
           </div>
-          <div class="roadmap clearfix">
+          <div class="roadmap clearfix" id="roadmap">
             <h2>路线图</h2>
             <div class="line">
               <div class="map container row">
@@ -105,7 +105,7 @@
               </div>
             </div>
           </div>
-          <div class="co clearfix">
+          <div class="co clearfix" id="co">
             <h2>投资机构与合作伙伴</h2>
             <div class="logos container">
               <div class="logo-item"><p class="frees"></p></div>
@@ -130,11 +130,11 @@
                   </div>
                   <div class="col-10 col-xs-12">
                     <ul class="nav-links">
-                      <li><a href="#">我们的产品</a></li>
-                      <li><a href="#">区块链背调</a></li>
-                      <li><a href="#">关于我们</a></li>
-                      <li><a href="#">线路图</a></li>
-                      <li><a href="#">合作伙伴</a></li>
+                      <li><a href="#ourProduct">我们的产品</a></li>
+                      <li><a href="#tecProcess">区块链背调</a></li>
+                      <li><a href="#aboutUs">关于我们</a></li>
+                      <li><a href="#roadmap">线路图</a></li>
+                      <li><a href="#co">合作伙伴</a></li>
                     </ul>
                   </div>
                 </div>
@@ -155,13 +155,13 @@
         <div class="shadow"></div>
         <div class="content">
             <a href="javascript:;" class="btn-close">X 关闭</a>
-            <ul>
-                <li><a href="#">首页</a></li>
-                <li><a href="#">我们的产品</a></li>
-                <li><a href="#">区块链背调</a></li>
-                <li><a href="#">关于我们</a></li>
-                <li><a href="#">区块链图</a></li>
-                <li class="last"><a href="#">合作伙伴</a></li>                
+            <ul class="nav-links">
+                <li><a href="#top">首页</a></li>
+                <li><a href="#ourProduct">我们的产品</a></li>
+                <li><a href="#tecProcess">区块链背调</a></li>
+                <li><a href="#aboutUs">关于我们</a></li>
+                <li><a href="#roadmap">区块链图</a></li>
+                <li class="last"><a href="#co">合作伙伴</a></li>                
                 <li class="last">
                 </li>
             </ul>
