--- a/public/src/less/common/footer-front.less
+++ b/public/src/less/common/footer-front.less
@@ -11,7 +11,7 @@ footer {
   background-color: #273237;
   #transition;
 	.logo-row {
-		padding: 59px 0 64px;
+		padding: 40px 0;
 		.logo {
 			float: left;
 			width: 174px;
@@ -38,8 +38,8 @@ footer {
 	.copyright-row {
 		border-top: 1px solid #666;    
 		.text {
-			padding: 38px 0;
-			color: #fff;
+			padding: 20px 0;
+			color: #aaa;
 			font-size: 14px;
 			margin-bottom: 0;
 		}
