--- a/public/src/less/common/header-front.less
+++ b/public/src/less/common/header-front.less
@@ -25,10 +25,11 @@ header.front-header {
     }
   }
   &.header-scroll {
-    background: rgba(0,0,0,0.5);
-    .nav-links li a {
-      color: #fff;
-    }
+    background: rgba(255, 255, 255, 1);
+    box-shadow: 0px 1px 6px #ddd;
+    // .nav-links li a {
+    //   color: #fff;
+    // }
   }
 	.logo {
 		float: left;
