--- a/public/src/less/index/index-phone.less
+++ b/public/src/less/index/index-phone.less
@@ -9,7 +9,7 @@ body {
 }
 
 .chainio {
-  padding: 235 * @s 0 55 * @s;
+  padding: 235 * @s 0 100 * @s;
 	.l-p {
 		// float: left;
     // width: 580px;
@@ -24,7 +24,7 @@ body {
 		h3 {
 			font-size: 26 * @s;
 			line-height: 42 * @s;
-      margin-bottom: 204 * @s;
+      margin-bottom: 120 * @s;
       span {
         display: block;
       }
@@ -111,7 +111,8 @@ body {
       text-align: center;
       margin: auto;
       font-size: 20 * @s;      
-      line-height: 36 * @s;      
+      line-height: 36 * @s;  
+      padding: 0 8%;    
 		}
 	}
 	.process-pic {
@@ -155,6 +156,9 @@ body {
 			width: auto;
       margin: 0 auto;
       .map-item {
+        .title {
+          font-size: 32 * @s;
+        }
         &.m1, &.m2, &.m3, &.m4 {
           position: static;
           width: 100%;
@@ -167,6 +171,7 @@ body {
             position: static;
             width: 100%;
             font-size: 28 * @s;
+            line-height: 42 * @s;
           }
         }
       }
