--- a/public/src/less/index/index-phone.less
+++ b/public/src/less/index/index-phone.less
@@ -16,18 +16,19 @@ body {
     text-align: center;
 		h2 {
 			font-size: 48 * @s;
-      margin: auto auto 102 * @s;
+      margin: auto auto 40 * @s;
       span {
         display: block;
       }
-		}
+    }
+    .secont-title {
+      font-size: 32 * @s;
+      margin-bottom: 80 * @s;
+    }
 		h3 {
 			font-size: 26 * @s;
 			line-height: 42 * @s;
       margin-bottom: 120 * @s;
-      span {
-        display: block;
-      }
 		}
 		.join-union {
 			width: 84%;
@@ -41,11 +42,52 @@ body {
 	}
 	.r-p {
     display: none;
-	}
+  }
+  .icon-cir {
+    &.icon-cir-1 {
+      width: 14 * @s;
+      height: 14 * @s;
+      top: 247 * @s;
+      left: 22%;
+    }
+    &.icon-cir-2 {
+      display: none;
+    }
+    &.icon-cir-3 {
+      width: 60 * @s;
+      height: 34 * @s;
+      top: 350 * @s;
+      left: auto;
+      right: 20%;
+    }
+    &.icon-cir-4 {
+      width: 17 * @s;
+      height: 17 * @s;
+      bottom: 468 * @s;
+      left: auto;
+      right: 25%;
+    }
+    &.icon-cir-5 {
+      width: 14 * @s;
+      height: 14 * @s;
+      bottom: 238 * @s;
+      left: 45%;
+    }
+    &.icon-cir-6 {
+      width: 24 * @s;
+      height: 24 * @s;
+      bottom: 180 * @s;
+      left: auto;
+      right: 22%;
+    }
+    &.icon-cir-7 {
+      display: none;
+    }
+  }
 }
 
 .our-product {
-  padding: 46 * @s 8% 194 * @s;
+  padding: 74 * @s 8% 194 * @s;
   width: 100%;
   margin: auto;
 	h2 {
@@ -67,7 +109,6 @@ body {
     padding: 0;
     text-align: center;
 		p {
-			margin-top: 35 * @s;
 			font-size: 20 * @s;
 			line-height: 56 * @s;
 		}
@@ -92,7 +133,20 @@ body {
 				height: 96 * @s;
 			}
 		}
-	}
+  }
+  .icon-cir {
+    &.icon-cir-1 {
+      width: 29 * @s;
+      height: 26 * @s;
+      background: url(../../images/cir10.png) no-repeat center;
+      top: 0;
+      left: auto;
+      right: 10%;
+    }
+    &.icon-cir-2,&.icon-cir-3,&.icon-cir-4,&.icon-cir-5 {
+      display: none;
+    }
+  }
 }
 
 .tec-process {
