--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,20 +32,27 @@
         <div class="chainio clearfix row container">
           <div class="l-p col-6 col-xs-12">
             <h2> <span>去中心化的</span><span>职业信用联盟</span></h2>
-            <h3><span>基于区块链技术</span><span>构建职业信用联盟链</span><span>提升雇员背景调查效率</span><span>让中国职业信用环境更美好</span></h3>
-            <a href="javascript:;" class="btn-main join-union">加入职业信用联盟</a>
+            <p class="secont-title">背调3.0即将到来</p>
+            <h3><span>基于区块链技术构建的职业信用联盟链</span><span>技术革新，提升雇员背景调查效率</span><span>共同努力，让中国职业信用环境更美好</span></h3>
+            <!-- <a href="javascript:;" class="btn-main join-union">加入职业信用联盟</a> -->
           </div>
           <div class="r-p col-6">
             <p></p>
           </div>
+          <i class="icon-cir icon-cir-1"></i>
+          <i class="icon-cir icon-cir-2"></i>
+          <i class="icon-cir icon-cir-3"></i>
+          <i class="icon-cir icon-cir-4"></i>
+          <i class="icon-cir icon-cir-5"></i>
+          <i class="icon-cir icon-cir-6"></i>
+          <i class="icon-cir icon-cir-7"></i>
         </div>
         <div class="our-product clearfix" id="ourProduct">
           <h2>我们的产品</h2>
           <div class="container">
             <div class="content-wrap row">
               <div class="words">
-                zxchain.io是基于区块链背调产品
-                <p>职业信用联盟链中的企业记录着离职员工在本企业就职的入离职时间、职位、离职原因、是否有劳动争议、是否竞业禁止等工作履历信息，离职员工的工作履历信息可提供给联盟链中其他企业（获得员工本人授权是前提）。通过这些不可篡改的职业信息，企业可以更加全面、真实的了解应聘候选人的过往履历，从而招到更放心的人。同时，对于求职者来说，可以获得更为公平的竞争机会</p>
+                <p>职信联盟链中的企业记录着离职员工在本企业就职的入离职时间、职位、离职原因、是否有劳动争议、是否竞业禁止等工作履历信息，离职员工的工作履历信息可提供给联盟链中其他企业（获得员工本人授权是前提）。<br/><br/>通过这些不可篡改的职业信息，企业可以更加全面的、真实的了解应聘候选人的过往履历，从而招到更放心的人。同时，对于求职者来说，可以获得更为公平的竞争机会。</p>
               </div>
               <div class="advantage">
                 <div class="adv-item pic-right clearfix row">
@@ -78,11 +85,16 @@
               </div>
             </div>
           </div>
+          <i class="icon-cir icon-cir-1"></i>
+          <i class="icon-cir icon-cir-2"></i>
+          <i class="icon-cir icon-cir-3"></i>
+          <i class="icon-cir icon-cir-4"></i>
+          <i class="icon-cir icon-cir-5"></i>          
         </div>
         <div class="tec-process clearfix" id="tecProcess">
           <h2>技术及流程</h2>
           <div class="steps row">
-            <p>我们正在建立一套严谨的共识机制（将PBFT、Raft等共识算法应用于验证入链、候选人授权、投票退链等业务场景）、智能合约以及激励机制</p>
+            <p>我们正在建立一套严谨的共识机制（基于dBFT、Raft等共识算法进行验证入链、候选人授权、投票退链等业务场景）、智能合约以及激励机制。通过公私钥的非对称加密技术，来保障链上企业间点对点数据交易的不侵犯隐私、安全和真实性。</p>
             <!-- <p>1.需求方发起背调</p> -->
             <!-- <p>2.求职者本人授权</p>
             <p>3.通过区块链的技术传播至供给方</p>
@@ -99,7 +111,7 @@
           <h2>路线图</h2>
           <div class="line">
             <div class="map container row">
-              <div class="map-item m1 up col-3 col-xs-12"><p><span class="title">Q4 2017 - Q1 2018</span><br />完成职业信用联盟极其交易模型<br />实现职业信用联盟链V1.0上链</p></div>
+              <div class="map-item m1 up col-3 col-xs-12"><p><span class="title">Q4 2017 - Q1 2018</span><br />完成职信联盟及其交易模型<br />实现职信联盟链V1.0上链</p></div>
               <div class="map-item m2 down col-3 col-xs-12"><p><span class="title">Q2 - Q4, 2018</span><br />推出基于智能合约的应用<br />5000家企业加入联盟链</p></div>
               <div class="map-item m3 up col-3 col-xs-12"><p><span class="title">2019</span><br />100000家企业上链<br />持续完善联盟链功能</p></div>
               <div class="map-item m4 down col-3 col-xs-12"><p><span class="title">2020</span><br />100万家企业上链<br />拓展基于职业信用的其他关联服务</p></div>
