--- a/public/src/less/index.less
+++ b/public/src/less/index.less
@@ -9,22 +9,34 @@ body {
   margin: 0;
 }
 
+.icon-cir {
+  display: block;
+  position: absolute;
+  background-size: contain!important;
+}
+
 .chainio {
+  position: relative;
   max-width: 1270px;
   padding: 203px 0 96px;
 	.l-p {
 		// float: left;
 		// width: 580px;
 		h2 {
-			color: #34495C;
+			color: #40B8B4;
 			font-size: 48px;
-			margin-top: 30px;
-			margin-bottom: 40px;
-		}
+			margin-top: 80px;
+			margin-bottom: 8px;
+    }
+    .secont-title {
+      color: #34495C;
+      font-size: 22px;
+      margin-bottom: 40px;
+    }
 		h3 {
 			color: #34495C;
-			font-size: 26px;
-			line-height: 38px;
+			font-size: 18px;
+			line-height: 32px;
       margin-bottom: 40px;
       span {
         display: block;
@@ -49,10 +61,62 @@ body {
 			width: 100%;
 			height: 454px;
 		}
-	}
+  }
+  .icon-cir {
+    &.icon-cir-1 {
+      width: 14px;
+      height: 14px;
+      background: url(../images/cir4.png) no-repeat center;
+      top: 254px;
+      left: -6.6%;
+    }
+    &.icon-cir-2 {
+      width: 14px;
+      height: 14px;
+      background: url(../images/cir4.png) no-repeat center;
+      top: 238px;
+      right: 0;
+    }
+    &.icon-cir-3 {
+      width: 60px;
+      height: 34px;
+      background: url(../images/cir2.png) no-repeat center;
+      top: 336px;
+      left: 45%;
+    }
+    &.icon-cir-4 {
+      width: 17px;
+      height: 17px;
+      background: url(../images/fang3.png) no-repeat center;
+      bottom: 208px;
+      left: 36%;
+    }
+    &.icon-cir-5 {
+      width: 14px;
+      height: 14px;
+      background: url(../images/cir5.png) no-repeat center;
+      bottom: 133px;
+      left:20%;
+    }
+    &.icon-cir-6 {
+      width: 24px;
+      height: 24px;
+      background: url(../images/fang2.png) no-repeat center;
+      bottom: -12px;
+      left:0;
+    }
+    &.icon-cir-7 {
+      width: 29px;
+      height: 26px;
+      background: url(../images/cir10.png) no-repeat center;
+      bottom: 196px;
+      right: -2%;
+    }
+  }
 }
 
 .our-product {
+  position: relative;
 	background-color: #F5F8F9;
 	padding: 82px 0 120px;
 	h2 {
@@ -79,7 +143,6 @@ body {
 		background-color: #40B8B4;
 		font-size: 24px;
 		p {
-			margin-top: 35px;
 			font-size: 16px;
 			line-height: 36px;
 		}
@@ -135,7 +198,44 @@ body {
 				}
 			}
 		}
-	}
+  }
+  .icon-cir {
+    &.icon-cir-1 {
+      width: 30px;
+      height: 30px;
+      background: url(../images/cir8.png) no-repeat center;
+      top: 365px;
+      left: 5%;
+    }
+    &.icon-cir-2 {
+      width: 17px;
+      height: 17px;
+      background: url(../images/fang3.png) no-repeat center;
+      bottom: 86px;
+      left: 5.5%;
+    }
+    &.icon-cir-3 {
+      width: 35px;
+      height: 28px;
+      background: url(../images/cir7.png) no-repeat center;
+      top: 197px;
+      right: 5.5%;
+    }
+    &.icon-cir-4 {
+      width: 30px;
+      height: 28px;
+      background: url(../images/cir9.png) no-repeat center;
+      bottom: 175px;
+      right: 5%;
+    }
+    &.icon-cir-5 {
+      width: 54px;
+      height: 171px;
+      background: url(../images/cir11.png) no-repeat center;
+      top: 180px;
+      left: 0;
+    }
+  }
 }
 
 .tec-process {
