--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,8 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <title>去中心化的职业信用联盟</title>
     <script type="text/javascript" src="/asset/js/flexible.js"></script>
-    <!-- <link rel='stylesheet' href='/asset/css/bootstrap.min.css' /> -->
     <% if (env !== 'dev') { %>
-      <link rel="stylesheet" type="text/css" charset="utf-8" href="/dist/css/index.css">
+      <link rel="stylesheet" type="text/css" charset="utf-8" href="/dist/css/index.css?v=<%= ts %>">
     <% } %>
   </head>
   <body>
@@ -180,6 +179,6 @@
             </ul>
         </div>
     </div>
-    <script type="text/javascript" src="/dist/index.js"></script>
+    <script type="text/javascript" src="/dist/index.js?v=<%= ts %>"></script>
   </body>
 </html>
