--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,7 +52,7 @@
           <div class="container">
             <div class="content-wrap row">
               <div class="words">
-                <p>职信联盟链中的企业记录着离职员工在本企业就职的入离职时间、职位、离职原因、是否有劳动争议、是否竞业禁止等工作履历信息，离职员工的工作履历信息可提供给联盟链中其他企业（获得员工本人授权是前提）。<br/><br/>通过这些不可篡改的职业信息，企业可以更加全面的、真实的了解应聘候选人的过往履历，从而招到更放心的人。同时，对于求职者来说，可以获得更为公平的竞争机会。</p>
+                <p>职信联盟链中的企业记录着离职员工在本企业就职的入离职时间、职位、离职原因、是否有劳动争议、是否竞业禁止等工作履历信息，离职员工的工作履历信息可提供给联盟链中其他企业（获得员工本人授权是前提）。<br/>通过这些不可篡改的职业信息，企业可以更加全面的、真实的了解应聘候选人的过往履历，从而招到更放心的人。同时，对于求职者来说，可以获得更为公平的竞争机会。</p>
               </div>
               <div class="advantage">
                 <div class="adv-item pic-right clearfix row">
