--- a/public/src/less/common/header-front.less
+++ b/public/src/less/common/header-front.less
@@ -129,7 +129,7 @@ header.front-header {
   }
 
   .nav-mobile {
-    display: block;
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -246,7 +246,7 @@ header.front-header {
   }
 
   .nav-mobile {
-    display: block;
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -363,7 +363,7 @@ header.front-header {
   }
 
   .nav-mobile {
-    display: block;
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -386,10 +386,10 @@ header.front-header {
         width: 66.667%;
         background: #fff;
         z-index: 99;
-        -webkit-transform: translate(100%, 0);
-        -ms-transform: translate(100%, 0);
-        -o-transform: translate(100%, 0);
-        transform: translate(100%, 0);
+        -webkit-transform: translate(200%, 0);
+        -ms-transform: translate(200%, 0);
+        -o-transform: translate(200%, 0);
+        transform: translate(200%, 0);
         -moz-box-shadow: inset 0.125em 0 0.25em #d8dde8;
         -webkit-box-shadow: inset 0.125em 0 0.25em #d8dde8;
         box-shadow: inset 0.125em 0 0.25em #d8dde8;
